--- a/src/main/resources/templates/project/detail.html
+++ b/src/main/resources/templates/project/detail.html
@@ -5,56 +5,77 @@
        xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Reported - Dashboard</title>
+    <script src="https://cdn.tiny.cloud/1/0eyt8a9t95q9tc7bp9r36u1vm85vxjisnjbarbrhvrawlsyn/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+
+    <script>
+        tinymce.init({
+            selector: 'textarea#editor',
+            menubar: false,
+            readonly: 1
+        });
+    </script>
 </head>
 <body>
 
 <div layout:fragment="content" class="container">
     <h2 style="margin-top: 30px">Project detail</h2>
-    <div th:if="${user.getRole() == 'PREMIUM'}" id="helper" class="form-text"><sup>To create invoice you have to have filled your address.</sup></div><hr>
+    <div th:if="${user.getRole() == 'PREMIUM'}" id="helper" class="form-text"><sup>To create invoice you have to fill your address.</sup></div><hr>
 
     <form>
         <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Project name</label>
-            <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" th:value="${project.name}">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Description</label>
-            <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" th:value="${project.description}">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Project Start</label>
-            <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" th:value="${project.getProjectStart().toLocalDate() + ' ' + project.getProjectStart().toLocalTime()}">
-            </div>
-        </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Project End</label>
-            <div class="col-sm-10">
+            <div class="col-sm-6">
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">Project name</label>
+                    <div class="col-sm-8">
+                        <input type="text" readonly class="form-control-plaintext" th:value="${project.name}">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">Short Description</label>
+                    <div class="col-sm-8">
+                        <input type="text" readonly class="form-control-plaintext" th:value="${project.description}">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">Project Start</label>
+                    <div class="col-sm-8">
+                        <input type="text" readonly class="form-control-plaintext" th:value="${project.getProjectStart().toLocalDate() + ' ' + project.getProjectStart().toLocalTime()}">
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">Project End</label>
+                    <div class="col-sm-8">
                 <span th:if="${project.getProjectEnd() != null}">
                     <input type="text" readonly class="form-control-plaintext" th:value="${project.getProjectEnd().toLocalDate() + ' ' + project.getProjectEnd().toLocalTime()}">
                 </span>
-                <span th:unless="${project.getProjectEnd() != null}">
+                        <span th:unless="${project.getProjectEnd() != null}">
                     <input type="text" readonly class="form-control-plaintext" th:value="${project.projectEnd}">
                 </span>
 
+                    </div>
+                </div>
+                <div class="form-group row">
+                    <label class="col-sm-4 col-form-label">Estimated Hours</label>
+                    <div class="col-sm-8">
+                        <input type="text" readonly class="form-control-plaintext" th:value="${project.estimatedHours}">
+                    </div>
+                </div>
+                <div class="form-group row" th:if="${user.getRole() == 'PREMIUM'}" >
+                    <label class="col-sm-4 col-form-label">Hour Rate</label>
+                    <div class="col-sm-8">
+                        <input type="text" readonly class="form-control-plaintext" th:value="${project.hourRate}">
+                    </div>
+                </div>
+            </div>
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label>Description:</label>
+                    <textarea id="editor" th:field="*{project.longDescription}" class="form-control"></textarea>
+                </div>
             </div>
         </div>
-        <div class="form-group row">
-            <label class="col-sm-2 col-form-label">Estimated Hours</label>
-            <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" th:value="${project.estimatedHours}">
-            </div>
-        </div>
-        <div class="form-group row" th:if="${user.getRole() == 'PREMIUM'}" >
-            <label class="col-sm-2 col-form-label">Hour Rate</label>
-            <div class="col-sm-10">
-                <input type="text" readonly class="form-control-plaintext" th:value="${project.hourRate}">
-            </div>
-        </div>
+
+
     </form>
     <div>
         <a th:href="@{/project/edit/{id}(id=${project.getId()})}" class="btn btn-outline-primary">Edit project</a>
