--- a/src/main/resources/templates/project/edit.html
+++ b/src/main/resources/templates/project/edit.html
@@ -5,6 +5,15 @@
        xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Reported - Dashboard</title>
+
+    <script src="https://cdn.tiny.cloud/1/0eyt8a9t95q9tc7bp9r36u1vm85vxjisnjbarbrhvrawlsyn/tinymce/5/tinymce.min.js" referrerpolicy="origin"></script>
+
+    <script>
+        tinymce.init({
+            selector: 'textarea#editor',
+            menubar: false
+        });
+    </script>
 </head>
 <body>
 
@@ -22,9 +31,13 @@
         </div>
 
         <div class="form-group">
-            <label>Description:</label>
+            <label>Short Description:</label>
             <input type="text" th:field="*{description}" class="form-control" placeholder="Description">
             <p th:if="${#fields.hasErrors('description')}" th:errors="*{description}" class="alert alert-danger" role="alert"></p>
+        </div>
+        <div class="form-group">
+            <label>Description:</label>
+            <textarea id="editor" th:field="*{longDescription}" class="form-control"></textarea>
         </div>
         <div class="form-group">
             <label>Start date:</label>
