--- a/src/main/resources/templates/header_dash.html
+++ b/src/main/resources/templates/header_dash.html
@@ -53,10 +53,10 @@
                 <script th:src="@{/dashboardEntry/dashEntryHandler.js}" type="text/javascript"></script>
                 <script th:src="@{/task/TaskEventHandler.js}" type="text/javascript"></script>
 
-                <div id="ongoingEntry" class="btn btn-outline-warning my-2 my-sm-0 col-auto">
+                <div id="ongoingEntry" class="btn btn-outline-warning my-2 my-sm-0 col-auto" style="display: none;"> <!--  style="display: none;" -->
                         <div class="row"><p id="projectNameTaskName"></p>
                                 <p id="taskID"></p>
-                                <div onclick="endTaskEntry()"><img id="stopEntry" src="https://img.icons8.com/flat-round/64/000000/stop.png" width="32" height="32"/></div>
+                                <div onclick="endTaskEntry()"><img id="stopEntry" style="display: none;" src="https://img.icons8.com/flat-round/64/000000/stop.png" width="32" height="32"/></div>
                         </div>
                 </div>
 
