--- a/src/main/resources/templates/task/all.html
+++ b/src/main/resources/templates/task/all.html
@@ -26,6 +26,7 @@
                     <th>Project</th>
                     <th>Name</th>
                     <th>Description</th>
+                    <th>Start/Stop</th>
                     <th>Status</th>
                     <th>Closed</th>
                     <th>Info</th>
@@ -38,6 +39,10 @@
                     <td th:text="${task.value.getName()}"></td>
                     <td th:text="${task.key.taskName}"></td>
                     <td th:text="${task.key.shortDescription}"></td>
+                    <td>
+                        <span th:if="${task.key.hasOngoingEntry() == true}"><a th:href="@{/task/endTaskEntry/{id}(id=${task.key.getId()})}">Stop</a></span>
+                        <span th:unless="${task.key.hasOngoingEntry() == true}"><a th:href="@{/task/startTaskEntry/{id}(id=${task.key.getId()})}">Start</a></span>
+                    </td>
                     <td>
                         <span th:if="${task.key.taskComplete() == true}">Done</span>
                         <span th:unless="${task.key.taskComplete() == true}">Pending</span>
