--- a/src/main/resources/templates/task/all.html
+++ b/src/main/resources/templates/task/all.html
@@ -5,6 +5,20 @@
        xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <title>Reported - Dashboard</title>
+    <script th:src="@{/task/TaskEventHandler.js}" type="text/javascript"></script>
+    <script th:inline="javascript">
+        function callStart(i){
+            var taskID = i;
+            console.log("[START] Task id changed to: " + taskID)
+            startTaskEntry2(taskID);
+        }
+
+        function callStop(i){
+            var taskID = i;
+            console.log("[STOP] Task id changed to: " + taskID)
+            endTaskEntry();
+        }
+    </script>
 </head>
 <body>
 
@@ -40,14 +54,13 @@
                     <td th:text="${task.key.taskName}"></td>
                     <td th:text="${task.key.shortDescription}"></td>
                     <td>
-                        <span th:if="${task.key.hasOngoingEntry() == true}"><a th:href="@{/task/endTaskEntry/{id}(id=${task.key.getId()})}">Stop</a></span>
-                        <span th:unless="${task.key.hasOngoingEntry() == true}"><a th:href="@{/task/startTaskEntry/{id}(id=${task.key.getId()})}">Start</a></span>
+                        <span th:if="${task.key.hasOngoingEntry() == true}"><span th:data-taskid="${task.key.getId()}" onclick="callStop(this.getAttribute('data-taskid'));"><i class="bi-stop-circle" style="font-size: 1.25rem; color: red;"></i> Stop</span></span>
+                        <span th:unless="${task.key.hasOngoingEntry() == true}"><span th:data-taskid="${task.key.getId()}" onclick="callStart(this.getAttribute('data-taskid'));"><i class="bi-skip-start-circle" style="font-size: 1.25rem; color: limegreen;"></i> Start</span></span>
                     </td>
                     <td>
                         <span th:if="${task.key.taskComplete() == true}">Done</span>
                         <span th:unless="${task.key.taskComplete() == true}">Pending</span>
                     </td>
-<!--                    <td th:text="${task.taskComplete()} ? 'Done' : 'Pending'"><td>-->
                     <td>
                         <span th:if="${task.key.taskComplete() == true}"><i class="bi-check-circle-fill" style="font-size: 1rem; color: green;"></i></span>
                         <span th:unless="${task.key.taskComplete() == true}"><a th:href="@{/task/completed/{id}(id=${task.key.getId()})}"><i class="bi-check-circle" style="font-size: 1rem; color: orange;"></i></a></span>
