--- a/src/main/resources/templates/header_dash.html
+++ b/src/main/resources/templates/header_dash.html
@@ -53,13 +53,25 @@
                 <script th:src="@{/dashboardEntry/dashEntryHandler.js}" type="text/javascript"></script>
                 <script th:src="@{/task/TaskEventHandler.js}" type="text/javascript"></script>
 
-                <div id="ongoingEntry" class="btn btn-outline-warning my-2 my-sm-0 col-auto" style="display: none;"> <!--  style="display: none;" -->
+                <div id="ongoingEntry" class="navbar-brand col-md-3 col-lg-2 mt-3 mr-0 px-3" style="display: none;"> <!--  style="display: none;" -->
                         <div class="row"><p id="projectNameTaskName"></p>
-                                <p id="taskID"></p>
+                                <p id="taskID" style="padding-right: 10px;"></p>
                                 <div onclick="endTaskEntry()"><img id="stopEntry" style="display: none;" src="https://img.icons8.com/flat-round/64/000000/stop.png" width="32" height="32"/></div>
                         </div>
                 </div>
-
+                <!-- Example single danger button -->
+                <div class="btn-group">
+                        <button type="button" class="btn btn-warning dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                Project - tet <img src="https://img.icons8.com/flat-round/64/000000/stop.png" width="24" height="24"/>
+                        </button>
+                        <div class="dropdown-menu">
+                                <a class="dropdown-item" href="#">running task #1 <img src="https://img.icons8.com/flat-round/64/000000/stop.png" width="16" height="16"/></a>
+                                <a class="dropdown-item" href="#">running task #2</a>
+                                <a class="dropdown-item" href="#">running task #3</a>
+                                <div class="dropdown-divider"></div>
+                                <a class="dropdown-item" href="#">All tasks (4)</a>
+                        </div>
+                </div>
 
                 <ul class="navbar-nav px-3">
                         <li class="nav-item text-nowrap">
