reported - task start/stop fixed

--- a/src/main/resources/templates/task/all.html
+++ b/src/main/resources/templates/task/all.html
@@ -14,9 +14,9 @@
         }
 
         function callStop(i){
-            var taskID = i;
-            console.log("[STOP] Task id changed to: " + taskID)
-            endTaskEntry();
+            var taskID2 = i;
+            console.log("[STOP] Task id changed to: " + taskID2)
+            endTaskEntry2(i);
         }
     </script>
 </head>
